--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>homemanagement</title>
   </head>
   <body>
-    <div id="root">Aniket</div>
+    <div id="root">Aniket Surve</div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
